--- a/cwd/includes/collections/jobs/card-job.html
+++ b/cwd/includes/collections/jobs/card-job.html
@@ -1,28 +1,30 @@
 
-<article class="job-card">
-	<header>
-		<i class="job-icon ft ">FT</i>
-		<h1>Machine Operator/Processor</h1>
+<article class="job-card panel-group">
+	<header id="heading@@id" class="panel-heading">
+	<a data-toggle="collapse" data-parent="#accordion" href="#collapse@@id" aria-expanded="true" aria-controls="collapse@@id">
+		<i class="job-icon @@job-type ">@@job-type</i>
+		<h1>Machine Operator / Processor</h1>
+		</a>
 	
 		<div class="meta">
-		<a href="#">Lorem ipsum</a> <strong>Listed:</strong> <a href="#">X days ago</a>
+		<i class="glyphicon glyphicon-map-marker pull-left"></i><a href="#">Lorem ipsum</a> <strong>Listed:</strong> <a href="#">X days ago</a>
 		</div>
 	</header>
-	<section>
-	
-		<p><strong>Occupation:</strong> <span>Machinery Operators & Drivers Machinery and Stationary Plant Operators Other Machine</span>
-
-		<br>
-		<strong>Job Summary:</strong><span>Machine Operators/Processors required for Heavy manufacturing for a Company ed He mmant/Lytton area. Duties include but are not limited to: Machine Operation, Heavy Lifting, Standing fng periods of time. Cadusal Roles initially, on a rotatong shift basis. Due to location, Car and Licence </span>
-		</p>
+	<div id="collapse@@id" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading@@id" >
+	<section class="panel-body">
+		<p><strong>Occupation: </strong> Machinery Operators &amp; Drivers Machinery and Stationary Plant Operators Other Machine </p>
+		<p><strong>Job Summary: </strong>  Machine Operators/Processors required for Heavy manufacturing for a Company ed He mmant/Lytton area. Duties include but are not limited to: Machine Operation, Heavy Lifting, Standing fng periods of time. Cadusal Roles initially, on a rotatong shift basis. Due to location, Car and Licence </p>
+		
 	</section>
+	</div>
 	
 	<footer>
 	<a href="">
 	<span>View Listing</span>
-	<i class="glyphicon glyphicon-chevron-right"></i>
+	<i class="glyphicon glyphicon-chevron-right circle"></i>
 	</a>
-	</div>
+	
 	
 	</footer>
 </article>
+
