--- a/cwd/templates/layouts/jobs.html
+++ b/cwd/templates/layouts/jobs.html
@@ -19,20 +19,34 @@
         </div>
         @@include('color-nav.html')
         <div class='row '>
-        <div>
+        
             
-            <div class='container news-box'>
-                <div class="col-md-3"></div>
-                <div class="col-md-9">
+            <div id="jobs" class='container'>
+                <div class="col-lg-3">
+                    @@include('collections/jobs/sidebar-job-filter.html')
+                </div>
+                <div class="col-lg-9">
                         
-                    <div class="job-card">
-                    @@include('collections/jobs/card-job.html')
-                    </div>
+                    
+                    @@include('collections/jobs/card-job.html',{
+                    "job-type":"ft",
+                    "id":"1"
+                    })
+                    @@include('collections/jobs/card-job.html',{
+                    "job-type":"pt",
+                    "id":"2"
+                    })
+                    @@include('collections/jobs/card-job.html',{
+                    "job-type":"cas",
+                    "id":3
+                    })
+
+                    
                </div>
             
             </div>
 
-            </div>
+           
         </div>
        
         @@include('footer.html')
