--- a/cwd/assets/less/arcordions.less
+++ b/cwd/assets/less/arcordions.less
@@ -81,18 +81,11 @@
 	}
 }
 
-// .panel2{
-// 	.panel-heading {
-// 		padding:0;
-// 		a {
-// 			font-size: 14px;
-// 			display: block;
-// 			background: @grey;
-// 			padding:1em;
-// 			color:#000;
-// 		}	
-// 	}
-// }
+.acordionTitle {
+	h2{
+	color: @purple-dark;
+}
+}
 .panel-body{
 	padding: 0;
 }
