--- a/cwd/assets/less/forms.less
+++ b/cwd/assets/less/forms.less
@@ -52,3 +52,40 @@
 .search-box.purple {
 	.search-box(@purple,@white,@yellow,@purple-dark)
 }
+
+.searchContainer{
+	background: @grey;
+	color: @purple-dark
+	
+
+
+}
+.searchContent{
+	padding: 1em 0 1em 0;
+
+	span{
+	display: block;
+		padding-left: 30px;
+		font-size: 2em;
+	}
+	label{
+		line-height: 1.2em;
+  		display: inline-block;
+  		vertical-align: text-top;
+		font-weight: normal;
+		font-size: 1.30em;
+		
+	}
+	.form-control{
+		height: 39px;
+
+	}
+	.form-group{
+		padding: 0;
+		
+			
+	}
+}
+.form-inline .form-control{
+	width: 12.55em;
+}
