--- a/cwd/templates/layouts/jobs.html
+++ b/cwd/templates/layouts/jobs.html
@@ -18,10 +18,14 @@
             </div>
         </div>
         @@include('color-nav.html')
+        
         <div class='row '>
         
-            
+                    @@include('collections/jobs/refine-search-job.html')
+                
             <div id="jobs" class='container'>
+             
+                    
                 <div class="col-lg-3">
                     @@include('collections/jobs/sidebar-job-filter.html')
                 </div>
