--- a/cwd/includes/collections/jobs/refine-search-job.html
+++ b/cwd/includes/collections/jobs/refine-search-job.html
@@ -1,18 +1,35 @@
-<div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingLevel1">
-        <h4 class="panel-title">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordionTop" href="#@@idLevel1" aria-expanded="false" aria-controls="@@idLevel1">
-        @@label
-        </a>
-        </h4>
-    </div>
-    <div id="@@idLevel1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingLevel1">
-        <div class="panel-body">
-            @@include('collections/jobs/sidebar-job-filter-level2.html',{
-                    "idLevel1":"item1-level2",
-                    "label":"Item #1 Level 2"
-                    "idParent":""
-                    })
+<div id="refineSearch" class="searchContainer">
+    <div class="searchContent container">
+        <form action="" class="form-inline">
+        
+        <div class="form-group col-lg-3">
+            <span>Refine search</span>
         </div>
+        <div class="form-group col-lg-3">
+                <label for="location">Location</label>
+                <input type="text" class="form-control" id="location" placeholder="Enter location">
+        </div>
+        <div class="form-group col-lg-3">
+                <label for="maxSite">Max site </label>
+                <select class="form-control" id="maxSite">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                </select>
+
+                
+        </div>
+        <div class="form-group col-lg-3">
+                <label for="workSite">Work type </label>
+                <select class="form-control" id="workSite">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                </select>
+        </div>  
+        </form>
     </div>
 </div>
+
