--- a/cwd/includes/collections/jobs/sidebar-job-filter.html
+++ b/cwd/includes/collections/jobs/sidebar-job-filter.html
@@ -1,3 +1,7 @@
+
+<div class="acoordionTitle">
+<h2>Filter by</h2>
+</div>
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
     <!-- Item 1 -->
     <div class="panel panel-default firstItem">
