Header and Footer Fixes

--- a/cwd/assets/less/footers.less
+++ b/cwd/assets/less/footers.less
@@ -1,26 +1,29 @@
 #footer {
-		list-style-type: none;
-		text-decoration: none;
-		background-color: @purple-darkest;
-		padding: 1.5em 0 1.5em 0;
-		ul {
-			padding: 0;
-		}
-	li {
-		display: inline;
-		padding: 1em;
-		a {
-			color: @white;
-		}
-		}
-	}
-
-
-
-
+    list-style-type: none;
+    text-decoration: none;
+    background-color: @purple-darkest;
+    padding: 1.5em 0 1.5em 0;
+    ul {
+        padding: 0;
+    }
+    li {
+        display: inline;
+        padding: 1em 0em;
+        a {
+            line-height: 2em;
+            color: @white;
+        }
+    }
+    i.circle {
+        display: inline-block;
+        margin: 0 1em;
+        vertical-align: middle;
+        .circle(0.4em, @purple)
+    }
+}
 footer {
-		padding-top: 3.5em;
-	h2 {
-		padding-bottom: 1em;
-	}
+    padding-top: 3.5em;
+    h2 {
+        padding-bottom: 1em;
+    }
 }
