--- a/cwd/assets/less/navbars.less
+++ b/cwd/assets/less/navbars.less
@@ -6,11 +6,25 @@
 
     nav {
         li {} 
-        a { color: @purple-dark; }
+        a { 
+        color: @grey-darkest; 
+		font-weight: bold;
+        }
+        a:hover {
+        	color: @purple-dark;
+        	background: none;
+        }
     }
-    .center-navigation {
-    	
-    }
+}
+#login {
+	li {
+	a { color:@purple-dark;}
+	a:hover { color:@purple;}
+	}
+	li:nth-child(2){
+	
+		border-left:1px solid @grey;
+	}
 }
 
 #color-nav {
@@ -92,6 +106,7 @@
 		}
 	}
 }
+
 
 .max-logo-container {
 	width: 75%;
