--- a/cwd/includes/primary-nav.html
+++ b/cwd/includes/primary-nav.html
@@ -2,15 +2,15 @@
             <div class="container">
                 <nav class="navbar  navbar-static-top">
                     <div id="logo" class='col-lg-3'>@@include('max-logo.html')</div>
-                    <ul class="nav nav-pills col-lg-5 center-navigation" >
+                    <ul class="nav nav-pills col-lg-5" >
                         <li><a href="#">Latest</a></li>
                         <li><a href="#">Tools &amp; resources</a></li>
                         <li><a href="#">Job Search</a></li>
                         <li><a href="#">About us</a></li>
                     </ul>
-                    <ul id="login" class="col-lg-2 nav nav-pills pull-right">
-                        <li><a href="#"><i class="glyphicon glyphicon-plus"></i><span>Login</span></a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-plus"></i><span>Registor</span></a></li>
+                    <ul id="login" class="col-lg-3 nav nav-pills pull-right">
+                        <li><a href="#"><i class="glyphicon glyphicon-lock"></i> <span>Login</span></a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-plus-sign"></i> <span>Registor</span></a></li>
                     </ul>
                 </nav>
             </div>
