--- a/cwd/includes/max-logo.html
+++ b/cwd/includes/max-logo.html
@@ -1,3 +1,3 @@
 <div class="max-logo-container">
-<object type="image/svg+xml" data="../assets/images/max-logo.svg">Your browser does not support SVG</object>
+<object type="image/svg+xml" data="/assets/images/max-logo.svg">Your browser does not support SVG</object>
 </div>
