Perparing for pegboard

--- a/cwd/includes/footer.html
+++ b/cwd/includes/footer.html
@@ -1,10 +1,10 @@
 <div class='row'>
-        <footer class="purple_bg">
+        <footer class="purple_dark_bg">
         <div class="container" >
             <div class="row">
                 <div class="col-md-3">
 <div class="max-logo-container">
-<object type="image/svg+xml" data="../assets/images/max-house-footer.svg">Your browser does not support SVG</object>
+<object type="image/svg+xml" data="/assets/images/max-house-footer.svg">Your browser does not support SVG</object>
 </div>
             <h2>
             Finding jobs, changing lives lorem ipsum dolor sitar indran tell greario
@@ -17,12 +17,12 @@
         <div id="footer" class="">
             <div class="container">
             <ul>
-                <li><a href="#">&copy; Copyright 2015 MAX Employment</a></li>
-                <li><a href="#">Pricacy</a></li>
-                <li><a href="#">Admin</a></li>
-                <li><a href="#">Sitemap</a></li>
-                <li><a href="#">Max sites</a></li>
-                <li><a href="#">1800 289 114</a></li>
+                <li><a href="#">&copy; Copyright 2015 MAX Employment</a><i class="circle"></i></li>
+                <li><a href="#">Privacy</a><i class="circle"></i></li>
+                <li><a href="#">Admin</a><i class="circle"></i></li>
+                <li><a href="#">Sitemap</a><i class="circle"></i></li>
+                <li><a href="#">Max sites</a><i class="circle"></i></li>
+                <li><a href="#">1800 289 114</a><i class="circle"></i></li>
                 <li><a href="#">info@maxconnect.com.au</a></li>
             </ul>
         </div>
