--- a/cwd/templates/pages/default.html
+++ b/cwd/templates/pages/default.html
@@ -15,15 +15,7 @@
             @@include('collections/blog/sidebar-share.html')
         </div>
         <div class="col-md-6">
-            <h2>It’s true – interviews can be intimidating, and even the best of us get tongue-tied. But you’ll be happy to hear that there are a few dos and don’ts that can help when you’re in the hotseat. Here’s are the five questions you’re likely to be asked, why they’re asking... and what they really want to hear. </h2>
-            <p class="paragraph-dark">1. Tell us about yourself?</p>
-            <p>In most cases, you’ll be asked to do this straight off the bat. It might seem overwhelming at first, but the interviewer is simply after a brief look into your work history, education, skills and experience. Or in other words... an intro to you! How you compose yourself under pressure can be make or break, so think about your answer in advance.</p>
-            <p><span class="paragraph-dark">DO:</span> Keep your answer to around 3 minutes, give or take.</p>
-            <p><span class="paragraph-dark">DO:</span> Cover your most recent or relevant work history in detail.</p>
-            <p><span class="paragraph-dark">DO:</span> Focus on your skills and experience, but feel free to mention positive personal details.</p>
-            <p><span class="paragraph-dark">DO NOT:</span> Raise anything that could be viewed as inappropriate.</p>
-            <p class="paragraph-dark">2. What brings you to our company?</p>
-            <p>At this point, the interviewer would like to know that you’re motivated, interested in the organisation and not just “doing the rounds”. This is a great opportunity to show that you’ve spent some time getting to know the company.</p>
+            [pbContent RegionName="default" StripHtml="false" Visble="True" ] 
             <div class="row article-end">
                 <div class="col-md-8">
                     <a href="" class="btn btn-default pill-button pull-left">
