Candidate Item Page

--- a/cwd/assets/less/arcordions.less
+++ b/cwd/assets/less/arcordions.less
@@ -2,6 +2,10 @@
 .panel-default{
 	border-color: #fff;
 }
+.panel-rounded {
+	border-radius: 0.5em;
+	overflow: hidden;
+}
 .panel-group .panel{
 	border-radius: .5em .5em 0 0;
 }
