--- a/cwd/assets/less/variables.less
+++ b/cwd/assets/less/variables.less
@@ -29,8 +29,21 @@
 @pill: 500px;
 
 
-
-
+/*=========================================
+=            Background Colors            =
+=========================================*/
+.purple_bg {
+	background: @purple;
+}
+.purple_alt_bg {
+	background: @purple-alt;
+}
+.purple_dark_bg {
+	background: @purple-dark;
+}
+.grey_bg {
+	background: @grey;
+}
 
 
 
