--- a/cwd/templates/layouts/jobs.html
+++ b/cwd/templates/layouts/jobs.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         @@include('primary-nav.html')
-        <div class="jumbotron purple_bg">
+        <div class="jumbotron purple_dark_bg">
             <div class="container">
                 <h1 class="text-center">Finding Jobs,<br> Changing Lives</h1>
                 <div class="col-lg-4 col-md-offset-4">
