--- a/cwd/templates/pages/index.html
+++ b/cwd/templates/pages/index.html
@@ -1,5 +1,5 @@
 
-        <div class="jumbotron purple_bg">
+        <div class="jumbotron purple_dark_bg">
             <div class="container">
                 <h1 class="text-center">Finding Jobs,<br> Changing Lives</h1>
                 <div class="col-lg-4 col-md-offset-4">
