--- a/cwd/includes/collections/jobs/card-job.html
+++ b/cwd/includes/collections/jobs/card-job.html
@@ -1,5 +1,5 @@
 
-<article class="job-card panel-group">
+<article class="job-card jobs panel-group">
 	<header id="heading@@id" class="panel-heading">
 	<a data-toggle="collapse" data-parent="#accordion" href="#collapse@@id" aria-expanded="true" aria-controls="collapse@@id">
 		<i class="job-icon @@job-type ">@@job-type</i>
