--- a/cwd/includes/collections/jobs/sidebar-job-filter.html
+++ b/cwd/includes/collections/jobs/sidebar-job-filter.html
@@ -1,6 +1,6 @@
 
-<div class="acoordionTitle">
-<h2>Filter by</h2>
+<div class="acordionTitle">
+<lable>Filter by</label>
 </div>
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
     <!-- Item 1 -->
