--- a/cwd/assets/less/arcordions.less
+++ b/cwd/assets/less/arcordions.less
@@ -86,9 +86,12 @@
 }
 
 .acordionTitle {
-	h2{
+	padding: 0.65em;
+	font-size: 1.6em;
+	font-weight:  bold;
 	color: @purple-dark;
-}
+	label{
+	}
 }
 .panel-body{
 	padding: 0;
