--- a/cwd/assets/less/variables.less
+++ b/cwd/assets/less/variables.less
@@ -23,6 +23,15 @@
 @blue: #5167DB;
 
 @white: #FFFFFF;
+/*=============================
+=            Fonts            =
+=============================*/
+body {
+	font-family: 'Avenir',Helvetica,sans-serif;
+}
+
+
+
 /*===================================
 =            Button Vars            =
 ===================================*/
