--- a/cwd/includes/collections/blog/sidebar-share.html
+++ b/cwd/includes/collections/blog/sidebar-share.html
@@ -1,10 +1,10 @@
 <div class="share-icons">
 <h5>Share/download:</h5>
 <ul>
-<i>icon</i>
-<i>icon</i>
-<i>icon</i>
-<i>icon</i>
-<i>icon</i>
+<i class="glyphicon glyphicon-king"></i>
+<i class="glyphicon glyphicon-queen"></i>
+<i class="glyphicon glyphicon-pawn"></i>
+<i class="glyphicon glyphicon-biship"></i>
+<i class="glyphicon glyphicon-knight"></i>
 </ul>
 </div>
