--- a/cwd/assets/less/jumbotrons.less
+++ b/cwd/assets/less/jumbotrons.less
@@ -8,3 +8,9 @@
 	background-repeat: no-repeat;
 	background-color: @purple-alt;
 }
+
+.jumbotron.jobs {
+	background-image: url('/assets/images/face_titles.png');
+	background-repeat: repeat;
+
+}
