--- a/cwd/templates/layouts/jobs.html
+++ b/cwd/templates/layouts/jobs.html
@@ -9,11 +9,12 @@
     </head>
     <body>
         @@include('primary-nav.html')
-        <div class="jumbotron purple_dark_bg">
+        <div class="jumbotron jobs">
             <div class="container">
-                <h1 class="text-center">Finding Jobs,<br> Changing Lives</h1>
+                <h1 class="text-center">Short heading,<br> goes in here.</h1>
                 <div class="col-lg-4 col-md-offset-4">
         @@include('search-box.html')
+
                 </div>
             </div>
         </div>
