--- a/cwd/includes/edit-nav.html
+++ b/cwd/includes/edit-nav.html
@@ -3,11 +3,11 @@
 	<div id="container">
 		<div id="edit-nav">
 			<ul class="nav nav-pills col-md-12 nav-justified">
-				<li class="triangle-menu"><a href="#">1 About me</a></li>
-				<li class="triangle-menu"><a href="#">2 Career objectives</a></li>
-				<li class="triangle-menu"><a href="#">3 Work history</a></li>
-				<li class="triangle-menu"><a href="#">4 education</a></li>
-				<li class="triangle-menu"><a href="#">5 competencies</a></li>
+				<li class="triangle-menu"><a href="#"><i class="glyphicon circle">1</i> About me</a></li>
+				<li class="triangle-menu"><a href="#"><i class="glyphicon circle">2</i> Career objectives</a></li>
+				<li class="triangle-menu"><a href="#"><i class="glyphicon circle">3</i> Work history</a></li>
+				<li class="triangle-menu"><a href="#"><i class="glyphicon circle">4</i> education</a></li>
+				<li class="triangle-menu"><a href="#"><i class="glyphicon circle">5</i> competencies</a></li>
 			</ul>
 		</div>
 	</div>
