--- a/cwd/assets/less/jobs.less
+++ b/cwd/assets/less/jobs.less
@@ -157,3 +157,13 @@ i.job-icon.parttime {
 		color: @purple-dark;
 	}
 }
+
+.advanceLink{
+	
+	text-align: center;
+	padding-top: 1em;
+	a{
+		color: #fff;
+		text-decoration: underline;
+		}
+}
