--- a/cwd/assets/less/jumbotrons.less
+++ b/cwd/assets/less/jumbotrons.less
@@ -9,8 +9,9 @@
 	background-color: @purple-alt;
 }
 
-.jumbotron.jobs {
+.jumbotron.tiles {
 	background-image: url('/assets/images/face_titles.png');
 	background-repeat: repeat;
+	background-position: 0px 0px;
 
 }
