--- a/cwd/includes/search-box.html
+++ b/cwd/includes/search-box.html
@@ -1,5 +1,5 @@
                     <div class="search-box @@color">
-                        <input type="text" class="form-control col-lg-9 " placeholder="Search">
+                        <input type="text" class="form-control col-lg-9 " placeholder="Search For A Job">
                         <button type="submit" class="btn btn-circle col-lg-2">
                             <i class="glyphicon glyphicon-search circle"></i>
                         </button>
