--- a/cwd/templates/layouts/jobs.html
+++ b/cwd/templates/layouts/jobs.html
@@ -9,16 +9,15 @@
     </head>
     <body>
         @@include('primary-nav.html')
-        <div class="jumbotron jobs">
+        <div class="jumbotron tiles">
             <div class="container">
                 <h1 class="text-center">Short heading,<br> goes in here.</h1>
                 <div class="col-lg-4 col-md-offset-4">
         @@include('search-box.html')
-
                 </div>
+                <div class="col-lg-4 col-md-offset-4 advanceLink"><a href="#">Advanced search</a></div>
             </div>
         </div>
-        @@include('color-nav.html')
         
         <div class='row '>
         
