--- a/cwd/templates/layouts/jobs.html
+++ b/cwd/templates/layouts/jobs.html
@@ -13,9 +13,11 @@
             <div class="container">
                 <h1 class="text-center">Short heading,<br> goes in here.</h1>
                 <div class="col-lg-4 col-md-offset-4">
-        @@include('search-box.html')
+        @@include('search-box.html',{"color":"purple"})
                 </div>
-                <div class="col-lg-4 col-md-offset-4 advanceLink"><a href="#">Advanced search</a></div>
+                <div class="col-lg-4 col-md-offset-4 advanceLink">
+                    <a href="#">Advanced search</a>
+                </div>
             </div>
         </div>
         
