Changing select, checkbox, radios

--- a/cwd/includes/primary-nav.html
+++ b/cwd/includes/primary-nav.html
@@ -4,13 +4,14 @@
                     <div id="logo" class='col-lg-3'>@@include('max-logo.html')</div>
                     <ul class="nav nav-pills col-lg-5" >
                         <li><a href="/templates/layouts/default.html">Latest</a></li>
-                        <li><a href="/templates/layouts/jobs.html">Tools &amp; resources</a></li>
+                        <li><a href="/templates/layouts/jobs.html">Advice</a></li>
+                        <li><a href="/templates/layouts/jobs.html">Resources</a></li>
                         <li><a href="/templates/layouts/candidate_item.html">Job Search</a></li>
-                        <li><a href="/templates/layouts/blog.html">About us</a></li>
                     </ul>
-                    <ul id="login" class="col-lg-3 nav nav-pills pull-right">
+                    <ul id="login" class="col-lg-4 nav nav-pills pull-right">
+                        <li><a href="/templates/layouts/blog.html">About us</a></li>
                         <li><a href="#"><i class="glyphicon glyphicon-lock"></i> <span>Login</span></a></li>
-                        <li><a href="#"><i class="glyphicon glyphicon-plus-sign"></i> <span>Registor</span></a></li>
+                        <li><a href="#"><i class="glyphicon glyphicon-user"></i> <span>Register</span></a></li>
                     </ul>
                 </nav>
             </div>
