--- a/cwd/assets/less/forms.less
+++ b/cwd/assets/less/forms.less
@@ -152,69 +152,93 @@ label {
 	float: left;
 }
 
-.radio-1 {
-	width: 193px;
-}
 
-.button-holder {
+/* RADIO */
+.radio-holder {
 	float: left;
 }
 
-/* RADIO */
-
-.regular-radio {
+.radio-holder(@size, @bg_color, @border_color, @selected_color){
+input[type=radio] {
 	display: none;
 }
 
-.regular-radio + label {
+input[type=radio] + label {
 	-webkit-appearance: none;
-	background-color: #fafafa;
-	border: 1px solid #cacece;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
-	padding: 9px;
+	background-color: @bg_color;
+	border: 2px solid @border_color;
+	padding: @size;
 	border-radius: 50px;
 	display: inline-block;
 	position: relative;
 }
 
-.regular-radio:checked + label:after {
+input[type=radio]:checked + label:after {
 	content: ' ';
 	width: 12px;
 	height: 12px;
 	border-radius: 50px;
 	position: absolute;
 	top: 3px;
-	background: #99a1a7;
-	box-shadow: inset 0px 0px 10px rgba(0,0,0,0.3);
-	text-shadow: 0px;
+	background: @selected_color;
 	left: 3px;
 	font-size: 32px;
 }
 
-.regular-radio:checked + label {
-	background-color: #e9ecee;
-	color: #99a1a7;
-	border: 1px solid #adb8c0;
-	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1), inset 0px 0px 10px rgba(0,0,0,0.1);
+
+input[type=radio]:checked + label {
+	background-color: @selected_color;
 }
 
-.regular-radio + label:active, .regular-radio:checked + label:active {
-	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
-}
-
-.big-radio + label {
-	padding: 16px;
-}
-
-.big-radio:checked + label:after {
-	width: 24px;
-	height: 24px;
-	left: 4px;
-	top: 4px;
 }
 
 
 
+.radio-big{
+	.radio-holder(9px, #fff, @orange-dark, @orange)
 
+}
+
+// SelectBoxIt
+
+
+.selectboxit-container {
+	background: #fff;
+	background-image: none;
+	box-shadow: 0px;
+	.selectboxit-btn {
+		padding:0.5em;
+	}
+	
+.selectboxit-options.selectboxit-list,
+.selectboxit.selectboxit-enabled.selectboxit-btn{
+	background-color: #fff;
+	border-radius: 0;
+	background-image: none;
+
+}
+
+
+
+.selectboxit-arrow-container{
+	
+	i{
+	 color: #fff;
+	 font-family: 'Glyphicons Halflings';
+	 font-size: 9px;
+	 padding-left: 2px;
+	  line-height: 2.3em;
+	 .circle(2em,@purple-dark)
+	}
+	.selectboxit-arrow.glyphicon.glyphicon-chevron-down.circle{
+
+	top: 15%; 
+	}
+
+}
+
+
+
+}
 
 
