--- a/cwd/templates/pages/advice.html
+++ b/cwd/templates/pages/advice.html
@@ -13,7 +13,7 @@
         
         <div class='row '>
         
-                    @@include('collections/jobs/refine-search-job.html')
+                    @@include('nav-advice.html')
                 
             <div id="jobs" class='container'>
              
@@ -26,7 +26,7 @@
                 <div class="col-lg-9">
                     
                     <div class="row">
-                    @@include('forms-elements.html')
+                    <!-- @@include('forms-elements.html') -->
                     </div>
                     
                </div>
