--- a/cwd/templates/pages/index.html
+++ b/cwd/templates/pages/index.html
@@ -7,7 +7,7 @@
                 </div>
             </div>
         </div>
-        @@include('color-nav.html')
+        @@include('nav-rainbow.html')
         <div class='row grey_bg'>
         <div id="just_for_you" >
             <div  class='container'>
